--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 Django==3.1.1
 django-tinymce==3.0.2
 django-tinymce4-lite==1.8.0
@@ -10,6 +9,7 @@ pipenv==2020.8.13
 requests==2.18.4
 Werkzeug==1.0.1
 whitenoise==5.2.0
+psycopg2-binary==2.8.6
 
 
 
