--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ Pillow==5.1.0
 pipenv==2020.8.13
 requests==2.18.4
 Werkzeug==1.0.1
+dj-database-url==0.5.0
 whitenoise==5.2.0
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
+whitenoise==5.2.0
 
 
 
